# my-renderer

./: .gitignore  CMakeLists.txt  README.md  conandata.yml
shaders/: fragment.glsl  vertex.glsl  vertex.spv
sources/: abstract_buffer.cpp  abstract_buffer.h  buffer_resource.cpp  buffer_resource.h  command_buffer_manager.cpp  command_buffer_manager.h  command_manager.cpp  command_manager.h  device_context.cpp  device_context.h  device_local_buffer.cpp  device_local_buffer.h  device_local_image.cpp  device_local_image.h  device_manager.cpp  device_manager.h  environment.cpp  environment.h  host_visible_buffer.cpp  host_visible_buffer.h  i_buffer.h  main.cpp  my_renderer.cpp  my_renderer.h  physical_device_data.cpp  physical_device_data.h  physical_device_manager.cpp  physical_device_manager.h  render_pipeline.cpp  render_pipeline.h  swapchain_context.cpp  swapchain_context.h  swapchain_data.cpp  swapchain_data.h  swapchain_manager.cpp  swapchain_manager.h  vertex.cpp  vertex.h  window.cpp  window.h
sources/utils/: abstract_buffer.cpp  device_local_buffer.h  device_local_image.cpp  environment.cpp  environment.h  render_pipeline.cpp  render_pipeline.h  window.cpp
